[container]-[fix]: overflowing container
- markup was overflowing the padding and margins, changed width of containers

--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -7,6 +7,7 @@
 
   & .container {
     padding-left: 25px;
+    width: auto;
   }
 }
 
